--- a/src/app/features/exercises/components/exercise-table/exercise-table.component.scss
+++ b/src/app/features/exercises/components/exercise-table/exercise-table.component.scss
@@ -27,8 +27,8 @@
     font-weight: 500;
   }
 
-  mat-progress-bar {
-    max-width: 300px;
+  mat-progress-spinner {
+    margin: 0 auto;
   }
 }
 
